lib/parser/SimpleCv4Parser.js
// $ANTLR 3.3 Nov 30, 2010 12:50:56 SimpleCv4.g 2014-06-09 15:18:01

var SimpleCv4Parser = function(input, state) {
    if (!state) {
        state = new org.antlr.runtime.RecognizerSharedState();
    }

    (function(){
    }).call(this);

    SimpleCv4Parser.superclass.constructor.call(this, input, state);

    this.dfa2 = new SimpleCv4Parser.DFA2(this);
    this.dfa26 = new SimpleCv4Parser.DFA26(this);
    this.dfa32 = new SimpleCv4Parser.DFA32(this);
    this.dfa45 = new SimpleCv4Parser.DFA45(this);

         

    /* @todo only create adaptor if output=AST */
    this.adaptor = new org.antlr.runtime.tree.CommonTreeAdaptor();

};

org.antlr.lang.augmentObject(SimpleCv4Parser, {
    EOF: -1,
    T__106: 106,
    T__107: 107,
    T__108: 108,
    T__109: 109,
    T__110: 110,
    T__111: 111,
    T__112: 112,
    T__113: 113,
    T__114: 114,
    T__115: 115,
    T__116: 116,
    T__117: 117,
    T__118: 118,
    T__119: 119,
    T__120: 120,
    T__121: 121,
    T__122: 122,
    T__123: 123,
    T__124: 124,
    T__125: 125,
    T__126: 126,
    T__127: 127,
    T__128: 128,
    T__129: 129,
    T__130: 130,
    T__131: 131,
    T__132: 132,
    T__133: 133,
    T__134: 134,
    T__135: 135,
    T__136: 136,
    T__137: 137,
    T__138: 138,
    T__139: 139,
    T__140: 140,
    T__141: 141,
    T__142: 142,
    T__143: 143,
    T__144: 144,
    T__145: 145,
    T__146: 146,
    T__147: 147,
    T__148: 148,
    T__149: 149,
    T__150: 150,
    T__151: 151,
    T__152: 152,
    T__153: 153,
    T__154: 154,
    T__155: 155,
    T__156: 156,
    T__157: 157,
    T__158: 158,
    T__159: 159,
    T__160: 160,
    T__161: 161,
    T__162: 162,
    T__163: 163,
    T__164: 164,
    T__165: 165,
    T__166: 166,
    PROG: 4,
    INCLUDE_SYSTEM: 5,
    TYPE_DEF: 6,
    TYPE_OLD: 7,
    TYPE_NEW: 8,
    STRUCT_DEF: 9,
    STRUCT_CNAME: 10,
    VAR_DEF: 11,
    VAR_NAME: 12,
    C_TYPE: 13,
    C_ID: 14,
    DEFAULT_VALUE: 15,
    TYPE_VOID: 16,
    TYPE_I8: 17,
    TYPE_I16: 18,
    TYPE_I32: 19,
    TYPE_UNSIGNED: 20,
    TYPE_F32: 21,
    TYPE_F64: 22,
    TYPE_CUSTOM: 23,
    FUNC_DEF: 24,
    FUNC_STAT: 25,
    FUNC_NAME: 26,
    FUNC_HEADER: 27,
    FUNC_PARAM: 28,
    FUNC_INVOKE: 29,
    FOR_STAT: 30,
    WHILE_STAT: 31,
    DOWHILE_STAT: 32,
    IF_STAT: 33,
    IF_BRANCH: 34,
    ELSEIF_BRANCH: 35,
    ELSE_BRANCH: 36,
    JUMP_STAT: 37,
    JUMP_RETURN: 38,
    JUMP_BREAK: 39,
    JUMP_CONTINUE: 40,
    BLOCK: 41,
    EMPTY_BLOCK: 42,
    ASSIGNMENT: 43,
    ASSIGN: 44,
    PLUS_ASSIGN: 45,
    MINUS_ASSIGN: 46,
    MULTI_ASSIGN: 47,
    DIVIDE_ASSIGN: 48,
    SHL_ASSIGN: 49,
    SHR_ASSIGN: 50,
    AND_ASSIGN: 51,
    OR_ASSIGN: 52,
    NOT_ASSIGN: 53,
    CONDITION: 54,
    SUB_CONDITION: 55,
    OR_EXPR: 56,
    OR_BRANCH: 57,
    AND_EXPR: 58,
    AND_BRANCH: 59,
    SHIFT_EXPR: 60,
    ADDSUB_EXPR: 61,
    MULTDIV_EXPR: 62,
    CASTTYPE: 63,
    SHL_OP: 64,
    SHR_OP: 65,
    ADD_OP: 66,
    SUB_OP: 67,
    MULTI_OP: 68,
    DIV_OP: 69,
    MOD_OP: 70,
    RELATION_EXPR: 71,
    EQUAL_RE: 72,
    NOTEQUAL_RE: 73,
    LESS_RE: 74,
    GREATER_RE: 75,
    GREATEREQUAL_RE: 76,
    LESSEQUAL_RE: 77,
    PREFIX_PLUS: 78,
    PREFIX_MINUS: 79,
    PREFIX_NOT: 80,
    PREFIX_AND: 81,
    PREFIX_STAR: 82,
    SIZEOF: 83,
    POSTFIX_EXPR: 84,
    POSTFIX: 85,
    POSTFIX_PLUS: 86,
    POSTFIX_MINUS: 87,
    MEMBERVAR: 88,
    ARRAYINDEX: 89,
    CONSTNUM: 90,
    DECLARATOR: 91,
    ASSIGNMENT_LEFT: 92,
    ASSIGNMENT_RIGHT: 93,
    VARIABLE: 94,
    ID: 95,
    INT: 96,
    STRING: 97,
    EXPONENT: 98,
    FLOAT: 99,
    WS: 100,
    CHINESECHAR: 101,
    MULTILINE_COMMENT: 102,
    SINGLELINE_COMMENT: 103,
    EscapeSequence: 104,
    OctalEscape: 105
});

(function(){
// public class variables
var EOF= -1,
    T__106= 106,
    T__107= 107,
    T__108= 108,
    T__109= 109,
    T__110= 110,
    T__111= 111,
    T__112= 112,
    T__113= 113,
    T__114= 114,
    T__115= 115,
    T__116= 116,
    T__117= 117,
    T__118= 118,
    T__119= 119,
    T__120= 120,
    T__121= 121,
    T__122= 122,
    T__123= 123,
    T__124= 124,
    T__125= 125,
    T__126= 126,
    T__127= 127,
    T__128= 128,
    T__129= 129,
    T__130= 130,
    T__131= 131,
    T__132= 132,
    T__133= 133,
    T__134= 134,
    T__135= 135,
    T__136= 136,
    T__137= 137,
    T__138= 138,
    T__139= 139,
    T__140= 140,
    T__141= 141,
    T__142= 142,
    T__143= 143,
    T__144= 144,
    T__145= 145,
    T__146= 146,
    T__147= 147,
    T__148= 148,
    T__149= 149,
    T__150= 150,
    T__151= 151,
    T__152= 152,
    T__153= 153,
    T__154= 154,
    T__155= 155,
    T__156= 156,
    T__157= 157,
    T__158= 158,
    T__159= 159,
    T__160= 160,
    T__161= 161,
    T__162= 162,
    T__163= 163,
    T__164= 164,
    T__165= 165,
    T__166= 166,
    PROG= 4,
    INCLUDE_SYSTEM= 5,
    TYPE_DEF= 6,
    TYPE_OLD= 7,
    TYPE_NEW= 8,
    STRUCT_DEF= 9,
    STRUCT_CNAME= 10,
    VAR_DEF= 11,
    VAR_NAME= 12,
    C_TYPE= 13,
    C_ID= 14,
    DEFAULT_VALUE= 15,
    TYPE_VOID= 16,
    TYPE_I8= 17,
    TYPE_I16= 18,
    TYPE_I32= 19,
    TYPE_UNSIGNED= 20,
    TYPE_F32= 21,
    TYPE_F64= 22,
    TYPE_CUSTOM= 23,
    FUNC_DEF= 24,
    FUNC_STAT= 25,
    FUNC_NAME= 26,
    FUNC_HEADER= 27,
    FUNC_PARAM= 28,
    FUNC_INVOKE= 29,
    FOR_STAT= 30,
    WHILE_STAT= 31,
    DOWHILE_STAT= 32,
    IF_STAT= 33,
    IF_BRANCH= 34,
    ELSEIF_BRANCH= 35,
    ELSE_BRANCH= 36,
    JUMP_STAT= 37,
    JUMP_RETURN= 38,
    JUMP_BREAK= 39,
    JUMP_CONTINUE= 40,
    BLOCK= 41,
    EMPTY_BLOCK= 42,
    ASSIGNMENT= 43,
    ASSIGN= 44,
    PLUS_ASSIGN= 45,
    MINUS_ASSIGN= 46,
    MULTI_ASSIGN= 47,
    DIVIDE_ASSIGN= 48,
    SHL_ASSIGN= 49,
    SHR_ASSIGN= 50,
    AND_ASSIGN= 51,
    OR_ASSIGN= 52,
    NOT_ASSIGN= 53,
    CONDITION= 54,
    SUB_CONDITION= 55,
    OR_EXPR= 56,
    OR_BRANCH= 57,
    AND_EXPR= 58,
    AND_BRANCH= 59,
    SHIFT_EXPR= 60,
    ADDSUB_EXPR= 61,
    MULTDIV_EXPR= 62,
    CASTTYPE= 63,
    SHL_OP= 64,
    SHR_OP= 65,
    ADD_OP= 66,
    SUB_OP= 67,
    MULTI_OP= 68,
    DIV_OP= 69,
    MOD_OP= 70,
    RELATION_EXPR= 71,
    EQUAL_RE= 72,
    NOTEQUAL_RE= 73,
    LESS_RE= 74,
    GREATER_RE= 75,
    GREATEREQUAL_RE= 76,
    LESSEQUAL_RE= 77,
    PREFIX_PLUS= 78,
    PREFIX_MINUS= 79,
    PREFIX_NOT= 80,
    PREFIX_AND= 81,
    PREFIX_STAR= 82,
    SIZEOF= 83,
    POSTFIX_EXPR= 84,
    POSTFIX= 85,
    POSTFIX_PLUS= 86,
    POSTFIX_MINUS= 87,
    MEMBERVAR= 88,
    ARRAYINDEX= 89,
    CONSTNUM= 90,
    DECLARATOR= 91,
    ASSIGNMENT_LEFT= 92,
    ASSIGNMENT_RIGHT= 93,
    VARIABLE= 94,
    ID= 95,
    INT= 96,
    STRING= 97,
    EXPONENT= 98,
    FLOAT= 99,
    WS= 100,
    CHINESECHAR= 101,
    MULTILINE_COMMENT= 102,
    SINGLELINE_COMMENT= 103,
    EscapeSequence= 104,
    OctalEscape= 105;

// public instance methods/vars
org.antlr.lang.extend(SimpleCv4Parser, org.antlr.runtime.Parser, {
        
    setTreeAdaptor: function(adaptor) {
        this.adaptor = adaptor;
    },
    getTreeAdaptor: function() {
        return this.adaptor;
    },

    getTokenNames: function() { return SimpleCv4Parser.tokenNames; },
    getGrammarFileName: function() { return "SimpleCv4.g"; }
});
org.antlr.lang.augmentObject(SimpleCv4Parser.prototype, {

    // inline static return class
    program_return: (function() {
        SimpleCv4Parser.program_return = function(){};
        org.antlr.lang.extend(SimpleCv4Parser.program_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleCv4.g:118:1: program : ( statement )+ -> ^( PROG ( statement )+ ) ;
    // $ANTLR start "program"
    program: function() {
        var retval = new SimpleCv4Parser.program_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

         var statement1 = null;

        var stream_statement=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule statement");
        try {
            // SimpleCv4.g:119:5: ( ( statement )+ -> ^( PROG ( statement )+ ) )
            // SimpleCv4.g:119:9: ( statement )+
            // SimpleCv4.g:119:9: ( statement )+
            var cnt1=0;
            loop1:
            do {
                var alt1=2;
                var LA1_0 = this.input.LA(1);

                if ( (LA1_0==ID||LA1_0==107||(LA1_0>=114 && LA1_0<=124)) ) {
                    alt1=1;
                }


                switch (alt1) {
                case 1 :
                    // SimpleCv4.g:0:0: statement
                    this.pushFollow(SimpleCv4Parser.FOLLOW_statement_in_program775);
                    statement1=this.statement();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) stream_statement.add(statement1.getTree());


                    break;

                default :
                    if ( cnt1 >= 1 ) {
                        break loop1;
                    }
                    if (this.state.backtracking>0) {this.state.failed=true; return retval;}
                        var eee = new org.antlr.runtime.EarlyExitException(1, this.input);
                        throw eee;
                }
                cnt1++;
            } while (true);



            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( this.state.backtracking===0 ) {
            retval.tree = root_0;
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 120:6: -> ^( PROG ( statement )+ )
            {
                // SimpleCv4.g:120:9: ^( PROG ( statement )+ )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(this.adaptor.create(PROG, "PROG"), root_1);

                if ( !(stream_statement.hasNext()) ) {
                    throw new org.antlr.runtime.tree.RewriteEarlyExitException();
                }
                while ( stream_statement.hasNext() ) {
                    this.adaptor.addChild(root_1, stream_statement.nextTree());

                }
                stream_statement.reset();

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}


            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    statement_return: (function() {
        SimpleCv4Parser.statement_return = function(){};
        org.antlr.lang.extend(SimpleCv4Parser.statement_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleCv4.g:123:1: statement : ( declaration | variable | structDefinition | typeDefinition | functionHeader ';' -> ^( FUNC_STAT functionHeader ) | functionHeader block -> ^( FUNC_DEF functionHeader block ) );
    // $ANTLR start "statement"
    statement: function() {
        var retval = new SimpleCv4Parser.statement_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal7 = null;
         var declaration2 = null;
         var variable3 = null;
         var structDefinition4 = null;
         var typeDefinition5 = null;
         var functionHeader6 = null;
         var functionHeader8 = null;
         var block9 = null;

        var char_literal7_tree=null;
        var stream_106=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 106");
        var stream_functionHeader=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule functionHeader");
        var stream_block=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule block");
        try {
            // SimpleCv4.g:124:5: ( declaration | variable | structDefinition | typeDefinition | functionHeader ';' -> ^( FUNC_STAT functionHeader ) | functionHeader block -> ^( FUNC_DEF functionHeader block ) )
            var alt2=6;
            alt2 = this.dfa2.predict(this.input);
            switch (alt2) {
                case 1 :
                    // SimpleCv4.g:124:9: declaration
                    root_0 = this.adaptor.nil();

                    this.pushFollow(SimpleCv4Parser.FOLLOW_declaration_in_statement809);
                    declaration2=this.declaration();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, declaration2.getTree());


                    break;
                case 2 :
                    // SimpleCv4.g:125:9: variable
                    root_0 = this.adaptor.nil();

                    this.pushFollow(SimpleCv4Parser.FOLLOW_variable_in_statement819);
                    variable3=this.variable();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, variable3.getTree());


                    break;
                case 3 :
                    // SimpleCv4.g:126:9: structDefinition
                    root_0 = this.adaptor.nil();

                    this.pushFollow(SimpleCv4Parser.FOLLOW_structDefinition_in_statement829);
                    structDefinition4=this.structDefinition();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, structDefinition4.getTree());


                    break;
                case 4 :
                    // SimpleCv4.g:127:9: typeDefinition
                    root_0 = this.adaptor.nil();

                    this.pushFollow(SimpleCv4Parser.FOLLOW_typeDefinition_in_statement839);
                    typeDefinition5=this.typeDefinition();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, typeDefinition5.getTree());


                    break;
                case 5 :
                    // SimpleCv4.g:128:9: functionHeader ';'
                    this.pushFollow(SimpleCv4Parser.FOLLOW_functionHeader_in_statement849);
                    functionHeader6=this.functionHeader();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) stream_functionHeader.add(functionHeader6.getTree());
                    char_literal7=this.match(this.input,106,SimpleCv4Parser.FOLLOW_106_in_statement851); if (this.state.failed) return retval; 
                    if ( this.state.backtracking===0 ) stream_106.add(char_literal7);



                    // AST REWRITE
                    // elements: functionHeader
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    if ( this.state.backtracking===0 ) {
                    retval.tree = root_0;
                    var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = this.adaptor.nil();
                    // 129:6: -> ^( FUNC_STAT functionHeader )
                    {
                        // SimpleCv4.g:129:9: ^( FUNC_STAT functionHeader )
                        {
                        var root_1 = this.adaptor.nil();
                        root_1 = this.adaptor.becomeRoot(this.adaptor.create(FUNC_STAT, "FUNC_STAT"), root_1);

                        this.adaptor.addChild(root_1, stream_functionHeader.nextTree());

                        this.adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}

                    break;
                case 6 :
                    // SimpleCv4.g:130:9: functionHeader block
                    this.pushFollow(SimpleCv4Parser.FOLLOW_functionHeader_in_statement874);
                    functionHeader8=this.functionHeader();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) stream_functionHeader.add(functionHeader8.getTree());
                    this.pushFollow(SimpleCv4Parser.FOLLOW_block_in_statement876);
                    block9=this.block();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) stream_block.add(block9.getTree());


                    // AST REWRITE
                    // elements: functionHeader, block
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    if ( this.state.backtracking===0 ) {
                    retval.tree = root_0;
                    var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = this.adaptor.nil();
                    // 131:6: -> ^( FUNC_DEF functionHeader block )
                    {
                        // SimpleCv4.g:131:9: ^( FUNC_DEF functionHeader block )
                        {
                        var root_1 = this.adaptor.nil();
                        root_1 = this.adaptor.becomeRoot(this.adaptor.create(FUNC_DEF, "FUNC_DEF"), root_1);

                        this.adaptor.addChild(root_1, stream_functionHeader.nextTree());
                        this.adaptor.addChild(root_1, stream_block.nextTree());

                        this.adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}

                    break;

            }
            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    declaration_return: (function() {
        SimpleCv4Parser.declaration_return = function(){};
        org.antlr.lang.extend(SimpleCv4Parser.declaration_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleCv4.g:134:1: declaration : '#' 'include' '<' libname '>' -> ^( INCLUDE_SYSTEM libname ) ;
    // $ANTLR start "declaration"
    declaration: function() {
        var retval = new SimpleCv4Parser.declaration_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal10 = null;
        var string_literal11 = null;
        var char_literal12 = null;
        var char_literal14 = null;
         var libname13 = null;
